--- a/BarberShop/Views/Login/Login.cshtml
+++ b/BarberShop/Views/Login/Login.cshtml
@@ -5,28 +5,33 @@
 <div class="container mt-5" id="loginPage">
     <div class="row justify-content-center">
         <div class="col-md-8 col-lg-6">
-            <!-- Aumentei a largura para col-md-8 e col-lg-6 -->
             <div class="card bg-dark text-light p-4" id="loginCard">
-                <h3 class="text-center text-danger mb-4" id="loginTitle">Bem-vindo à Barbearia CG DREAMS</h3>
-                <p class="text-center" id="loginInstruction">Por favor, insira seu telefone ou e-mail:</p>
-                <form id="loginForm">
-                    <div class="form-group mb-4" id="phoneInputContainer">
-                        <input type="text" id="phoneInput" name="phoneInput" class="form-control text-center" placeholder="Telefone" />
+                <!-- Exibe o logo da barbearia, se disponível -->
+                @if (ViewData["BarbeariaLogo"] != null)
+                {
+                    <div class="text-center mb-3">
+                        <img src="@ViewData["BarbeariaLogo"]" alt="Logo da Barbearia" class="img-fluid" style="max-height: 100px;">
                     </div>
-                    <div class="form-group mb-4" id="emailInputContainer">
-                        <input type="text" id="emailInput" name="emailInput" class="form-control text-center" placeholder="E-mail" />
-                        <div id="emailAutocomplete" class="autocomplete-box"></div>
-                    </div>
-                    <div id="errorMessage" class="text-danger mt-2" style="display:none;">Por favor, insira um e-mail ou telefone válido.</div>
-                    <div class="text-center mt-4">
-                        <button type="submit" class="btn btn-danger btn-block" id="submitButton">Avançar</button>
-                    </div>
+                }
 
-                    <div id="loadingSpinner" class="text-center mt-3" style="display:none;">
-                        <div class="spinner-border text-danger" role="status">
-                            <span class="sr-only">Carregando...</span>
-                        </div>
-                        <p class="mt-2">Carregando...</p>
+                <!-- Exibe o nome da barbearia dinamicamente -->
+                <h3 class="text-center text-danger mb-4" id="loginTitle">Bem-vindo à @ViewData["BarbeariaNome"]</h3>
+                <p class="text-center" id="loginInstruction">Por favor, insira seu e-mail ou telefone:</p>
+
+                <form id="loginForm">
+                    <div class="form-group mb-4" id="inputContainerLogin">
+                        <input type="text" id="inputFieldLogin" name="inputFieldLogin" class="form-control text-center" placeholder="E-mail ou telefone" />
+                        <div id="emailAutocompleteLogin" class="autocomplete-box"></div>
+                    </div>
+                    <div class="form-group mb-4 position-relative" id="passwordInputContainerLogin">
+                        <input type="password" id="passwordInputLogin" name="passwordInputLogin" class="form-control text-center" placeholder="Senha" required />
+                        <span id="toggleLoginPassword" class="position-absolute" style="right: 15px; top: 50%; transform: translateY(-50%); cursor: pointer;">
+                            <i class="fas fa-eye text-secondary"></i>
+                        </span>
+                    </div>
+                    <div id="errorMessageLogin" class="text-danger mt-2" style="display:none;">Por favor, insira um e-mail ou telefone válido.</div>
+                    <div class="text-center mt-4">
+                        <button type="submit" class="btn btn-danger btn-block" id="submitButtonLogin">Avançar</button>
                     </div>
                 </form>
 
@@ -37,6 +42,7 @@
         </div>
     </div>
 </div>
+
 
 <!-- Modal de Cadastro -->
 <div class="modal fade" id="registerModal" tabindex="-1" aria-labelledby="registerModalLabel" aria-hidden="true">
@@ -52,12 +58,38 @@
                         <input type="text" id="nameInput" name="nameInput" class="form-control text-center" placeholder="Nome" required />
                     </div>
                     <div class="form-group mb-4">
-                        <input type="text" id="registerEmailInput" name="registerEmailInput" class="form-control text-center" placeholder="E-mail" required />
+                        <input type="email" id="registerEmailInput" name="registerEmailInput" class="form-control text-center" placeholder="E-mail" required />
                         <div id="registerEmailAutocomplete" class="autocomplete-box position-absolute"></div>
                     </div>
-
                     <div class="form-group mb-4">
                         <input type="text" id="registerPhoneInput" name="registerPhoneInput" class="form-control text-center" placeholder="Telefone" required />
+                    </div>
+                    <div class="form-group mb-4 position-relative">
+                        <input type="password" id="registerPasswordInput" name="passwordInput" class="form-control text-center" placeholder="Senha" required />
+                        <span id="toggleRegisterPassword" class="position-absolute" style="right: 15px; top: 50%; transform: translateY(-50%); cursor: pointer;">
+                            <i class="fas fa-eye text-secondary"></i>
+                        </span>
+                    </div>
+                    <div class="form-group mb-4 position-relative">
+                        <input type="password" id="confirmPasswordInput" name="confirmPasswordInput" class="form-control text-center" placeholder="Confirme a Senha" required />
+                        <span id="checkIcon" class="position-absolute check-icon" style="display: none;">
+                            <i class="fas fa-check text-success"></i>
+                        </span>
+                        <span id="toggleConfirmPassword" class="position-absolute" style="right: 15px; top: 50%; transform: translateY(-50%); cursor: pointer;">
+                            <i class="fas fa-eye text-secondary"></i>
+                        </span>
+                        <div id="passwordMatchError" class="text-danger mt-2" style="display:none;">A senha digitada está diferente.</div>
+                    </div>
+
+                    <div class="mb-4">
+                        <p class="mb-1 text-center">A senha deve conter:</p>
+                        <ul id="passwordRequirements" class="list-unstyled text-center">
+                            <li id="lengthRequirement" class="text-danger">• Pelo menos 8 caracteres</li>
+                            <li id="uppercaseRequirement" class="text-danger">• Uma letra maiúscula (A-Z)</li>
+                            <li id="lowercaseRequirement" class="text-danger">• Uma letra minúscula (a-z)</li>
+                            <li id="numberRequirement" class="text-danger">• Um número (0-9)</li>
+                            <li id="specialRequirement" class="text-danger">• Um caractere especial (!&#64;#$%^&*)</li>
+                        </ul>
                     </div>
                     <div id="registerErrorMessage" class="text-danger mt-2" style="display:none;">Erro ao registrar.</div>
                     <div class="text-center mt-4">
@@ -68,6 +100,7 @@
         </div>
     </div>
 </div>
+
 
 <!-- Modal de Verificação de Código (para cadastro e login) -->
 <div class="modal fade" id="verificationModal" tabindex="-1" aria-labelledby="verificationModalLabel" aria-hidden="true">
@@ -81,7 +114,6 @@
                 <p>Um código foi enviado para o seu email. Por favor, insira-o abaixo:</p>
                 <p id="countdownText">Você poderá solicitar um novo código em: <span id="countdownTimer">30</span> segundos.</p>
                 <form id="verificationForm">
-                    <!-- Campo oculto para armazenar o clienteId -->
                     <input type="hidden" id="clienteIdField" name="clienteId" value="">
 
                     <div class="form-group mb-4">
@@ -100,6 +132,12 @@
     </div>
 </div>
 
+<div id="loadingSpinner" style="display:none;">
+    <div class="spinner-border text-danger" role="status">
+        <span class="sr-only">Carregando...</span>
+    </div>
+    <p class="mt-2">Carregando...</p>
+</div>
 
 <!-- Toast de Erro -->
 <div class="toast-container position-fixed bottom-0 end-0 p-3">
