--- a/BarberShop/wwwroot/css/site.css
+++ b/BarberShop/wwwroot/css/site.css
@@ -854,20 +854,8 @@ body {
     font-size: 1.1em;
     margin-top: 10px;
     color: #bdc3c7;
+    transition: opacity 0.5s ease-in-out;
 }
-
-#erro-barbearia-piada-container {
-    display: none; /* Oculta o container da piada */
-}
-
-
-#erro-barbearia-piada {
-    opacity: 1;
-    position: absolute;
-    width: 100%;
-    text-align: center;
-}
-
 
 #erro-barbearia-botao-voltar {
     margin-top: 20px;
@@ -911,20 +899,6 @@ body {
 
     to {
         opacity: 1;
-    }
-}
-
-@keyframes piada-fade {
-    0% {
-        opacity: 0;
-    }
-
-    50% {
-        opacity: 1;
-    }
-
-    100% {
-        opacity: 0;
     }
 }
 
