--- a/BarberShop/Views/Home/Index.cshtml
+++ b/BarberShop/Views/Home/Index.cshtml
@@ -3,19 +3,25 @@
 @{
     ViewData["Title"] = "Barbearias Disponíveis";
 }
-
+<div id="pagineInicialIndex"></div>
 <div class="container mt-5 barbearias-list-container">
     <h2 class="text-center text-light mb-4">Barbearias Disponíveis</h2>
-    <div class="row justify-content-center">
+
+    <!-- Campo de Busca -->
+    <div class="d-flex justify-content-center mb-4">
+        <input type="text" id="searchBarbearia" class="form-control w-50" placeholder="Buscar barbearia..." />
+    </div>
+
+    <div class="row justify-content-center" id="barbeariaList">
         @foreach (var barbearia in Model)
         {
-            <div class="col-md-6 col-lg-4 mb-4">
+            <div class="col-md-6 col-lg-4 mb-4 barbearia-card-container" data-name="@barbearia.Nome.ToLower()">
                 <div class="card bg-dark text-light shadow-lg rounded-3 h-100 barbearia-card">
                     <div class="card-body text-center">
                         <!-- Logo da Barbearia -->
                         @if (barbearia.Logo != null)
                         {
-                            <img src="data:image/png;base64,@Convert.ToBase64String(barbearia.Logo)" alt="Logo da @barbearia.Nome" class="mb-3 rounded-circle barbearia-logo">
+                            <img src="data:image/png;base64,@Convert.ToBase64String(barbearia.Logo)" alt="Logo da @barbearia.Nome" class="mb-3 rounded-circle barbearia-logo" style="max-width: 100px; max-height: 100px;">
                         }
 
                         <h4 class="card-title mb-2 barbearia-title">@barbearia.Nome</h4>
@@ -35,7 +41,7 @@
                         <p class="mb-2"><i class="fas fa-clock barbearia-icon"></i> <strong>Horário:</strong> @barbearia.HorarioFuncionamento</p>
                         <p class="mb-2"><i class="fas fa-location-arrow barbearia-icon"></i> <strong>CEP:</strong> @barbearia.CEP</p>
 
-                        <a href="@Url.Action("Login", "Login", new { barbeariaUrl = barbearia.UrlSlug })" class="btn w-100 mt-3 barbearia-btn">
+                        <a href="@Url.Action("Login", "Login", new { barbeariaUrl = barbearia.UrlSlug })" class="btn w-100 mt-3" style="background-color: #e74c3c; border-color: #e74c3c; color: #ffffff;">
                             Acessar @barbearia.Nome
                         </a>
                     </div>
