Adição calendarios no agendamento

--- a/BarberShop/Views/Agendamento/ResumoAgendamento.cshtml
+++ b/BarberShop/Views/Agendamento/ResumoAgendamento.cshtml
@@ -74,6 +74,11 @@
                 <button id="confirmarAgendamentoBtn" class="btn btn-danger" style="display: none;">Finalizar Agendamento</button>
                 <button id="changePaymentMethodBtn" class="btn btn-secondary" style="display: none;">Mudar Forma de Pagamento</button>
             </div>
+
+            <!-- Botão de Voltar -->
+            <div class="mt-4">
+                <button class="btn btn-secondary" onclick="history.back()">Voltar</button>
+            </div>
         </div>
     </div>
 
