--- a/BarberShop/wwwroot/css/site.css
+++ b/BarberShop/wwwroot/css/site.css
@@ -355,6 +355,48 @@ body {
     background-color: #1c1c1c;
 }
 
+/* Sidebar adjustments */
+#sidebar-wrapper .list-group-item {
+    padding: 0.75rem 1.25rem; /* Reduz o padding para diminuir o espaçamento */
+    transition: background-color 0.3s ease, color 0.3s ease;
+}
+
+    /* Margem superior apenas para o primeiro item */
+    #sidebar-wrapper .list-group-item:first-child {
+        margin-top: 1rem;
+    }
+
+/* Estilo das divisórias */
+.sidebar-divider {
+    border-top: 1px solid #555; /* Mais fino para um visual mais clean */
+    margin: 0; /* Remover margem */
+}
+
+/* Ajuste de espaçamento no botão de menu */
+#menu-toggle {
+    font-size: 1.2rem;
+    padding: 0.5rem;
+    margin-right: 1rem;
+    transition: background-color 0.2s ease;
+}
+
+    #menu-toggle:hover {
+        background-color: #1a73e8;
+    }
+
+
+/* Navbar Title */
+.navbar h5 {
+    font-weight: bold;
+    font-size: 1.25rem;
+}
+
+/* Page content padding when sidebar is toggled */
+#wrapper.toggled #page-content-wrapper {
+    padding-left: 0.5rem;
+}
+
+
 .list-group-item {
     background-color: #2c3e50;
     color: #ffffff;
